--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -13,33 +18,33 @@
 
         <h1>Calculator</h1>
 
-        <input type="text" id="">
+        <input type="text" id="calculation-input">
 
         <div id="container">
 
             <div id="numbers">
-                <button class="digit">1</button>
-                <button class="digit">2</button>
-                <button class="digit">3</button>
-                <button class="digit">4</button>
-                <button class="digit">5</button>
-                <button class="digit">6</button>
-                <button class="digit">7</button>
-                <button class="digit">8</button>
-                <button class="digit">9</button>
+                <button class="digit" id="one">1</button>
+                <button class="digit" id="two">2</button>
+                <button class="digit" id="three">3</button>
+                <button class="digit" id="four">4</button>
+                <button class="digit" id="five">5</button>
+                <button class="digit" id="six">6</button>
+                <button class="digit" id="seven">7</button>
+                <button class="digit" id="eight">8</button>
+                <button class="digit" id="nine">9</button>
             </div>
 
             <div id="right-side">
-                <button>+</button>
-                <button>-</button>
-                <button>*</button>
-                <button>/</button>
+                <button class="digit" id="add">+</button>
+                <button class="digit" id="sub">-</button>
+                <button class="digit" id="mul">x</button>
+                <button class="digit" id="div">/</button>
             </div>
 
             <div id="lower-row">
-                <button>0</button>
-                <button>.</button>
-                <button>=</button>
+                <button class="digit" id="zero">0</button>
+                <button class="digit" id="point">.</button>
+                <button class="digit" id="equal">=</button>
             </div>
         </div>
     </div>
