JS Logic Part 1

--- a/index.html
+++ b/index.html
@@ -23,28 +23,28 @@
         <div id="container">
 
             <div id="numbers">
-                <button class="digit" id="one">1</button>
-                <button class="digit" id="two">2</button>
-                <button class="digit" id="three">3</button>
-                <button class="digit" id="four">4</button>
-                <button class="digit" id="five">5</button>
-                <button class="digit" id="six">6</button>
-                <button class="digit" id="seven">7</button>
-                <button class="digit" id="eight">8</button>
-                <button class="digit" id="nine">9</button>
+                <button class="digit selectJS" id="one">1</button>
+                <button class="digit selectJS" id="two">2</button>
+                <button class="digit selectJS" id="three">3</button>
+                <button class="digit selectJS" id="four">4</button>
+                <button class="digit selectJS" id="five">5</button>
+                <button class="digit selectJS" id="six">6</button>
+                <button class="digit selectJS" id="seven">7</button>
+                <button class="digit selectJS" id="eight">8</button>
+                <button class="digit selectJS" id="nine">9</button>
             </div>
 
             <div id="right-side">
-                <button class="digit" id="add">+</button>
-                <button class="digit" id="sub">-</button>
-                <button class="digit" id="mul">x</button>
-                <button class="digit" id="div">/</button>
+                <button class="operator selectJS" id="add">+</button>
+                <button class="operator selectJS" id="sub">-</button>
+                <button class="operator selectJS" id="mul">x</button>
+                <button class="operator selectJS" id="div">/</button>
             </div>
 
             <div id="lower-row">
-                <button class="digit" id="zero">0</button>
-                <button class="digit" id="point">.</button>
-                <button class="digit" id="equal">=</button>
+                <button class="digit selectJS" id="zero">0</button>
+                <button class="digit selectJS" id="point">.</button>
+                <button class="operator selectJS" id="equal">=</button>
             </div>
         </div>
     </div>
