--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
 
         <div id="container">
 
+            <div id="top-row">
+                <button class="function-btn" id="ac">AC</button>
+                <button class="function-btn" id="del">DEL</button>
+            </div>
+
             <div id="numbers">
                 <button class="digit selectJS" id="one">1</button>
                 <button class="digit selectJS" id="two">2</button>
